# 22s-pa03-girvan-newman-project

./: .gitignore  CMakeLists.txt  README.md  main.cpp  output.txt
RandomGraphs/: barbell_example.graphml  bigGraph.graphml  football.graphml  karateClub.graphml  newbie.graphml  randomGraph.graphml  randomGraph1.graphml  randomGraph2.graphml  test.graphml  tester.graphml  words.graphml
extra/: outputForGraph.txt  outputForGraph_GN.txt  schoolNames.txt
output/: GNOutput.txt  LabelPropagationOutput.txt
src/: GirvanNewman.cpp  GirvanNewman.h  LabelPropagationAlgo.cpp  LabelPropagationAlgo.h  RandomGraphGenerator.py  footballOutputGrapher.py  gml_to_graphml_conversion.py  main.cpp
src/girvan-newman_algo/: main.cpp
src/gml_to_graphml/: gml_to_graphml_conversion.py
